@@ -1,12 +1,13 @@
 /* Copyright 2010, University of Colorado */
 
-package edu.colorado.phet.capacitorlab.control;
+package edu.colorado.phet.capacitorlab.developer;
 
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 
 import javax.swing.JCheckBoxMenuItem;
 
+import edu.colorado.phet.capacitorlab.CLPaints;
 import edu.colorado.phet.capacitorlab.CapacitorLabApplication;
 import edu.colorado.phet.capacitorlab.module.CLModule;
 import edu.colorado.phet.common.phetcommon.application.Module;
@@ -20,6 +21,7 @@ public class VoltageShapesDebugMenuItem extends JCheckBoxMenuItem {
 
     public VoltageShapesDebugMenuItem( final CapacitorLabApplication app ) {
         super( "Show voltage measurement shapes" );
+        setForeground( CLPaints.VOLTAGE_SHAPES );
         addActionListener( new ActionListener() {
             public void actionPerformed( ActionEvent e ) {
                 for ( Module module : app.getModules() ) {
