@@ -1,15 +1,20 @@
 /* Copyright 2010, University of Colorado */
 
-package edu.colorado.phet.capacitorlab.shapes;
+package edu.colorado.phet.capacitorlab.developer;
 
 import java.awt.BasicStroke;
 import java.awt.Color;
 import java.awt.Stroke;
 
+import edu.colorado.phet.capacitorlab.CLPaints;
 import edu.colorado.phet.capacitorlab.model.*;
 import edu.colorado.phet.capacitorlab.model.Battery.BatteryChangeAdapter;
 import edu.colorado.phet.capacitorlab.model.Capacitor.CapacitorChangeAdapter;
 import edu.colorado.phet.capacitorlab.module.dielectric.DielectricModel;
+import edu.colorado.phet.capacitorlab.shapes.BatteryShapeFactory;
+import edu.colorado.phet.capacitorlab.shapes.CapacitorShapeFactory;
+import edu.colorado.phet.capacitorlab.shapes.VoltmeterShapeFactory;
+import edu.colorado.phet.capacitorlab.shapes.WireShapeFactory;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.umd.cs.piccolo.nodes.PPath;
@@ -26,7 +31,7 @@ public class VoltageShapesDebugNode extends PComposite {
     private static final boolean SHOW_BATTERY_BODY = false;
     
     private static final Stroke STROKE = new BasicStroke( 2f );
-    private static final Color STROKE_COLOR = Color.RED;
+    private static final Color STROKE_COLOR = CLPaints.VOLTAGE_SHAPES;
     
     public VoltageShapesDebugNode( final DielectricModel model, final ModelViewTransform mvt ) {
         
